RESOLVED FIXED114464
[Mac] WebSocket doesn't work with authenticating proxies
https://bugs.webkit.org/show_bug.cgi?id=114464
Summary [Mac] WebSocket doesn't work with authenticating proxies
Alexey Proskuryakov
Reported 2013-04-11 13:59:35 PDT
WebSocket always crashes when an authenticating proxy is in use. <rdar://problem/10416316>
Attachments
proposed fix (11.31 KB, patch)
2013-04-11 14:09 PDT, Alexey Proskuryakov
beidson: review+
buildbot: commit-queue-
Alexey Proskuryakov
Comment 1 2013-04-11 14:09:48 PDT
Created attachment 197671 [details] proposed fix
Build Bot
Comment 2 2013-04-11 14:28:21 PDT
Alexey Proskuryakov
Comment 3 2013-04-11 14:41:40 PDT
Note You need to log in before you can comment on or make changes to this bug.